Create clock component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,6 @@
 @import "base/variables";
 @import "components/navigation";
+@import "components/clock";
 
 $space-large: 2.5rem;
 $title-color: #555;
